--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,12 @@
 
-# Disk Setup
+Is EFI right? Is it booting?
 
-EFI?
+Selecting a disk that is mounted should throw an error or unmount all partitions on it
 
+go package install not working...
 
-
-ttf-nunito-sans is broken lol
+What do if aur package is broken?
+    Maybe have a .broken file that I can add to on the fly; anything in it is ignored?
 
 
 
@@ -20,7 +21,6 @@ How to do dotfiles like fish and such?
 VS Code Extensions should be stored or synced from somewhere else.
 
 
-Selecting a disk that is mounted should throw an error or unmount all partitions on it
 
 
 ### skel?
@@ -52,10 +52,6 @@ ly.service
 Script for running pipes: `pipes-rs -c rgb -d 25 -k light,heavy,curved,knobby`
 
 
-
-# Werk
-
-onedriver.service
 
 
 
